--- a/src/main/res/layout/fragment_home_summary.xml
+++ b/src/main/res/layout/fragment_home_summary.xml
@@ -1,13 +1,27 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    >
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
 
-</RelativeLayout>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/shinningGrey"
+                android:layout_margin="@dimen/list_view_margin"
+
+                />
+        </RelativeLayout>
+
 </android.support.v4.widget.NestedScrollView>
+</LinearLayout>
