--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="black">#222222</color>
     <color name="white">#ffffff</color>
     <color name="orange">#FF9900</color>
+    <color name="lightMelon">#CAEDE1</color>
+    <color name="shinningGrey">#E0DCF2</color>
 </resources>
